--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@fortawesome/free-solid-svg-icons": "^7.1.0",
     "@fortawesome/vue-fontawesome": "^3.1.2",
     "@tailwindcss/vite": "^4.1.14",
+    "@types/node": "^24.7.2",
     "tailwindcss": "^4.1.14"
   }
 }
