--- a/package.json
+++ b/package.json
@@ -5,23 +5,24 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "vue-tsc --noEmit && vite build",
     "preview": "vite preview"
   },
   "devDependencies": {
+    "@vitejs/plugin-vue": "^5.2.4",
     "typescript": "~5.9.3",
-    "vite": "npm:rolldown-vite@7.1.14"
+    "vite": "npm:rolldown-vite@7.1.14",
+    "vite-plugin-vuetify": "^2.1.3",
+    "vue-tsc": "^2.2.12"
   },
   "overrides": {
     "vite": "npm:rolldown-vite@7.1.14"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^7.1.0",
-    "@fortawesome/free-brands-svg-icons": "^7.1.0",
-    "@fortawesome/free-solid-svg-icons": "^7.1.0",
-    "@fortawesome/vue-fontawesome": "^3.1.2",
-    "@tailwindcss/vite": "^4.1.14",
-    "@types/node": "^24.7.2",
-    "tailwindcss": "^4.1.14"
+    "@mdi/font": "^7.4.47",
+    "@types/node": "^24.10.13",
+    "vue": "^3.5.28",
+    "vue-router": "^4.6.4",
+    "vuetify": "^3.11.8"
   }
 }
